--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -124,8 +124,8 @@
                             <img src="../img/user1.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
-                                <p>Diseñadora  UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis.  UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -166,8 +166,8 @@
                             <img src="../img/user2.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Erick B.</p>
-                                <p>Desarrollador Fullstack</p>
-                                <p>Lima, Peru</p>
+                                <p>Des. Fullstack</p>
+                                <p>Lima, Per</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -203,8 +203,8 @@
                             <img src="../img/user3.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Samanta N.</p>
-                                <p>Diseñadora UX/UI</p>
-                                <p>Medellín, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Medellín, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -242,8 +242,8 @@
                             <img src="../img/user4.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Carlos E.</p>
-                                <p>Desarrollador Fullstack</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Des. Fullstack</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -280,8 +280,8 @@
                             <img src="../img/user5.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Maria C.</p>
-                                <p>Desarrolladora Fullstack</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Des. Fullstack</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -316,8 +316,8 @@
                             <img src="../img/user6.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Esteban F.</p>
-                                <p>Diseñador UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -357,8 +357,8 @@
                             <img src="../img/user7.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Nora V.</p>
-                                <p>Diseñadora UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -391,8 +391,8 @@
                             <img src="../img/user8.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Arnold O.</p>
-                                <p>Diseñador UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -426,8 +426,8 @@
                         <img src="../img/user9.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Sasha M.</p>
-                            <p>Desarrolladora Fullstack</p>
-                            <p>Bogota, Colombia</p>
+                            <p>Des. Fullstack</p>
+                            <p>Bogota, Col</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -463,8 +463,8 @@
                         <img src="../img/user10.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Kevin A.</p>
-                            <p>Diseñador UX</p>
-                            <p>Bogota, Colombia</p>
+                            <p>Dis. UX</p>
+                            <p>Bogota, Col</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -498,8 +498,8 @@
                         <img src="../img/user11.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Bryan G.</p>
-                            <p>Desarrolldor Fullstack</p>
-                            <p>Cali, Colombia</p>
+                            <p>Des. Fullstack</p>
+                            <p>Cali, Col</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -534,8 +534,8 @@
                         <img src="../img/user12.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Carolina G.</p>
-                            <p>Diseñadora UX/UI</p>
-                            <p>Bogota, Colombia</p>
+                            <p>Dis. UX/UI</p>
+                            <p>Bogota, Col</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -572,8 +572,8 @@
                         <img src="../img/user13.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Claudia L.</p>
-                            <p>Desarrolladora Fullstack</p>
-                            <p>Lima, Peru</p>
+                            <p>Des. Fullstack</p>
+                            <p>Lima, Per</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -610,8 +610,8 @@
                         <img src="../img/user14.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Sofy L.</p>
-                            <p>Diseñadora UX/UI</p>
-                            <p>Quito, Ecuador</p>
+                            <p>Dis. UX/UI</p>
+                            <p>Quito, Ecu</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -651,8 +651,8 @@
                         <img src="../img/user15.png" alt="Usuario" class="user">
                         <div class="data">
                             <p>Hyroshi C.</p>
-                            <p>Diseñador UX/UI</p>
-                            <p>Buenos Aires, Argentina</p>
+                            <p>Dis. UX/UI</p>
+                            <p>Buenos Aires, Arg</p>
                         </div>
                         <div class="socialMedia">
                             <a href="https://es-la.facebook.com/" target="_blank" >
@@ -691,8 +691,8 @@
                             <img src="../img/user16.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Carlos C.</p>
-                                <p>Diseñador UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -728,8 +728,8 @@
                             <img src="../img/user17.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Daniela O.</p>
-                                <p>Desarrolladora Backend</p>
-                                <p>Lima, Peru</p>
+                                <p>Des. Backend</p>
+                                <p>Lima, Per</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -766,8 +766,8 @@
                             <img src="../img/user18.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Alexa R.</p>
-                                <p>Diseñadora UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -808,8 +808,8 @@
                             <img src="../img/user19.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Daniella C.</p>
-                                <p>Desarrolladora Backend</p>
-                                <p>Medellín, Colombia</p>
+                                <p>Des. Backend</p>
+                                <p>Medellín, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -846,8 +846,8 @@
                             <img src="../img/user20.png" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Erika A.</p>
-                                <p>Desarrolladora Frontend</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Des. Frontend</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
