--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -3,8 +3,8 @@
     // Font-size
 
     $mainFont: 'Poppins', sans-serif;
-    $secondaryFont:"Press Start +2P", cursive;
-    $matchLetter:6rem;
+    $secondaryFont:'Press Start 2P', cursive;
+    $matchLetter: 5rem;
     $mainTitle:2.2rem;
     $LargeTitle :1.87rem;
     $MediumTitle :1.6rem;
@@ -54,7 +54,7 @@
 
     // Margin
 
-    $margin:0 auto;
+    $margin:0px auto;
     $sectionMargin: 150px auto;
     $neutralMargin:0px auto;
 
